--- a/FXExperienceTools/src/com/fxexperience/tools/backup/CaspianStylerMainFrame.bak.fxml
+++ b/FXExperienceTools/src/com/fxexperience/tools/backup/CaspianStylerMainFrame.bak.fxml
@@ -27,6 +27,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Text?>
 <?stylesheet true:CaspianStyler.css?>
 <?stylesheet true:../Tools.css?>
 
@@ -38,7 +39,7 @@
             <children>
               <GridPane id="ContentPanel" fx:id="contentPanel" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" vgap="10.0" StackPane.alignment="CENTER">
                 <children>
-                  <Button id="button1" text="Button" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                  <Button id="button1" text="Button" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                   <ToggleButton id="toggleButton1" text="ToggleButton" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                            <GridPane.margin>
                               <Insets top="5.0" />
@@ -95,7 +96,7 @@
                     </items>
                   </ComboBox>
                   <Hyperlink id="hyperlink1" text="Hyperlink" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.vgrow="NEVER" />
-                  <Label id="label1" text="Label" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.vgrow="NEVER">
+                  <Label text="Label" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.vgrow="NEVER">
                            <GridPane.margin>
                               <Insets top="5.0" />
                            </GridPane.margin>
@@ -119,6 +120,7 @@
                               <Insets bottom="10.0" right="25.0" />
                            </GridPane.margin>
                         </TextArea>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="NEVER" />
                 </children>
                 <columnConstraints>
                   <ColumnConstraints hgrow="NEVER" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" />
@@ -144,7 +146,7 @@
       </AnchorPane>
     <AnchorPane minWidth="350.0">
          <children>
-          <GridPane id="PropertiesPanel" fx:id="propertiesPanel" hgap="2.0" maxWidth="330.0" minWidth="330.0" prefWidth="330.0" vgap="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+          <GridPane id="PropertiesPanel" fx:id="propertiesPanel" alignment="TOP_CENTER" hgap="2.0" maxWidth="330.0" minWidth="330.0" prefWidth="330.0" vgap="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
               <Label id="label2" maxWidth="5000.0" styleClass="title" text="Text" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0">
                      <GridPane.margin>
@@ -168,7 +170,7 @@
                   </Label>
               <Label id="label12" minWidth="-Infinity" styleClass="prop" text="Font Size:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
               <Label id="label13" minWidth="-Infinity" styleClass="prop" text="Font:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-              <Slider fx:id="fontSizeSlider" max="30.0" maxWidth="130.0" min="6.0" minWidth="130.0" prefWidth="130.0" styleClass="slider-prop" value="13.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <Slider fx:id="fontSizeSlider" max="30.0" maxWidth="130.0" min="6.0" minWidth="130.0" onDragDetected="#updateCssAction" prefWidth="130.0" styleClass="slider-prop" value="13.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
               <ChoiceBox fx:id="fontChoiceBox" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" styleClass="font-choice-box" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="1">
                 <items>
                   <FXCollections fx:factory="observableArrayList">
@@ -181,15 +183,15 @@
               <CheckBox fx:id="fontDefaultCheckBox" minWidth="-Infinity" selected="true" styleClass="check-box-prop" text="Default" GridPane.columnIndex="2" GridPane.rowIndex="1" />
               <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="10">
                 <children>
-                  <Button fx:id="copyCSS" prefHeight="50.0" prefWidth="180.0" styleClass="big-button" text="Copy Stylesheet" HBox.hgrow="NEVER" />
-                  <Button fx:id="saveCSS" alignment="CENTER" prefHeight="50.0" prefWidth="180.0" styleClass="big-button" text="Save Stylesheet" HBox.hgrow="NEVER" />
+                  <Button onAction="#copyButtonAction" prefHeight="50.0" prefWidth="180.0" styleClass="big-button" text="Copy Stylesheet" HBox.hgrow="NEVER" />
+                  <Button alignment="CENTER" onAction="#saveButtonAction" prefHeight="50.0" prefWidth="180.0" styleClass="big-button" text="Save Stylesheet" HBox.hgrow="NEVER" />
                 </children>
               </HBox>
               <TabPane styleClass="floating" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="100.0" tabMaxWidth="100.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.hgrow="NEVER" GridPane.rowIndex="8">
                 <tabs>
                   <Tab id="Simple" text="Simple">
                     <content>
-                      <GridPane id="GridPane-Properties" fx:id="simpleGridPane" hgap="3.0" vgap="3.0">
+                      <GridPane id="GridPane-Properties" fx:id="simpleGridPane" hgap="3.0" vgap="5.0">
                         <children>
                           <Label id="label6" styleClass="title" text="Colors" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0">
                                        <GridPane.margin>
@@ -228,7 +230,7 @@
                                           <Insets right="10.0" />
                                        </GridPane.margin>
                                     </CheckBox>
-                          <ComboBox fx:id="gradientComboBox" maxWidth="100.0" minWidth="-Infinity" pickOnBounds="true" prefHeight="30.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.hgrow="NEVER" GridPane.rowIndex="11">
+                          <ComboBox fx:id="gradientComboBox" maxWidth="100.0" minWidth="-Infinity" pickOnBounds="true" prefHeight="35.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.hgrow="NEVER" GridPane.rowIndex="11">
                                        <GridPane.margin>
                                           <Insets bottom="5.0" />
                                        </GridPane.margin>
